<resources>
    <string name="app_name">LinearTask</string>
    <string name="_4_5">4.5</string>
    <string name="_150_reviews">(150 Reviews)</string>
    <string name="_5_day_ago">5 day ago</string>
    <string name="programmer">Programmer</string>
    <string name="iraq">Iraq</string>
    <string name="_3_hr">3 hr</string>
    <string name="hamsa_ali">Hamsa Ali</string>
    <string name="babylon">Babylon</string>
    <string name="girl_image">girl image</string>
    <string name="uk">UK</string>
</resources>