<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/girl"
            app:shapeAppearanceOverlay="@style/Imagebg" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingHorizontal="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/hamsa_ali"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/shape2"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="2dp"
                    android:text="@string/_3_hr"
                    android:textColor="#EDEBEB"
                    android:textSize="14sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/programmer"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/babylon"
                    android:textColor="@color/secondaryText"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:contentDescription="@string/girl_image"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/dm_sans_medium"
                        android:gravity="center"
                        android:text="@string/uk"
                        android:textColor="@color/TertiaryText"
                        android:textSize="12sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/_5_day_ago"
                    android:textColor="@color/TertiaryText"
                    android:textSize="12sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/_150_reviews"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/_4_5"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_star_24"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>